--- a/src/_base.html
+++ b/src/_base.html
@@ -16,6 +16,7 @@
         <link href="{{ base_url }}/asset/css/font-awesome-4.0.3.css" rel="stylesheet">
         <link href="{{ base_url }}/asset/css/prettify-1.0.css" rel="stylesheet">
         <link href="{{ base_url }}/asset/css/base.css" rel="stylesheet">
+        <link href="{{ base_url }}/asset/css/custom.css" rel="stylesheet">
 
         <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!--[if lt IE 9]>
@@ -28,10 +29,6 @@
                 text-align: center;
                 font-size: 60px;
                 font-weight: 300;
-            }
-
-            div.col-md-9 p:first-of-type {
-                text-align: center;
             }
         </style>
     </head>
