--- a/src/base/_base.html
+++ b/src/base/_base.html
@@ -35,17 +35,17 @@
 
     <body>
 
-        {% include "_nav.html" %}
+        {% include "base/_nav.html" %}
 
         <div class="container">
 
             <div class="col-md-9" role="main">{% block content %}{% endblock %}</div>
 
-            <div class="col-md-3">{% include "_toc.html" %}</div>
+            <div class="col-md-3">{% include "base/_toc.html" %}</div>
 
-            <div class="col-md-9" role="main">{% include "_disqus.html" %}</div>
+            <div class="col-md-9" role="main">{% include "base/_disqus.html" %}</div>
 
-            <div class="col-md-9" role="main">{% include "_footer.html" %}</div>
+            <div class="col-md-9" role="main">{% include "base/_footer.html" %}</div>
 
 
         </div>
