--- a/src/base/_base.html
+++ b/src/base/_base.html
@@ -5,18 +5,17 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         {% if page_description %}<meta name="description" content="{{ page_description }}">{% endif %}
-        {% if site_author %}<meta name="author" content="{{ site_author }}">{% endif %}
+        {% if site.author %}<meta name="author" content="{{ site.author }}">{% endif %}
         {% if canonical_url %}<link rel="canonical" href="{{ canonical_url }}">{% endif %}
-        {% if favicon %}<link rel="shortcut icon" href="{{ favicon }}">
-        {% else %}<link rel="shortcut icon" href="{{ base_url }}/asset/img/favicon.ico">{% endif %}
+        <link rel="shortcut icon" href="{{ site.base_url }}/asset/img/favicon.ico">
 
         <title>{{ page_title }}</title>
 
-        <link href="{{ base_url }}/asset/css/bootstrap-custom.min.css" rel="stylesheet">
-        <link href="{{ base_url }}/asset/css/font-awesome-4.0.3.css" rel="stylesheet">
-        <link href="{{ base_url }}/asset/css/prettify-1.0.css" rel="stylesheet">
-        <link href="{{ base_url }}/asset/css/base.css" rel="stylesheet">
-        <link href="{{ base_url }}/asset/css/custom.css" rel="stylesheet">
+        <link href="{{ site.base_url }}/asset/css/bootstrap-custom.min.css" rel="stylesheet">
+        <link href="{{ site.base_url }}/asset/css/font-awesome-4.0.3.css" rel="stylesheet">
+        <link href="{{ site.base_url }}/asset/css/prettify-1.0.css" rel="stylesheet">
+        <link href="{{ site.base_url }}/asset/css/base.css" rel="stylesheet">
+        <link href="{{ site.base_url }}/asset/css/custom.css" rel="stylesheet">
 
         <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!--[if lt IE 9]>
@@ -50,9 +49,9 @@
 
         </div>
 
-        <script src="{{ base_url }}/asset/js/jquery-1.10.2.min.js"></script>
-        <script src="{{ base_url }}/asset/js/bootstrap-3.0.3.min.js"></script>
-        <script src="{{ base_url }}/asset/js/prettify-1.0.min.js"></script>
-        <script src="{{ base_url }}/asset/js/base.js"></script>
+        <script src="{{ site.base_url }}/asset/js/jquery-1.10.2.min.js"></script>
+        <script src="{{ site.base_url }}/asset/js/bootstrap-3.0.3.min.js"></script>
+        <script src="{{ site.base_url }}/asset/js/prettify-1.0.min.js"></script>
+        <script src="{{ site.base_url }}/asset/js/base.js"></script>
     </body>
 </html>
