--- a/src/base/_nav.html
+++ b/src/base/_nav.html
@@ -12,7 +12,7 @@
             </button>
 
             <!-- Main title -->
-            <a class="navbar-brand" href="{{ homepage_url }}">{{ site_name }}</a>
+            <a class="navbar-brand" href="{{ homepage_url }}">{{ site.name }}</a>
         </div>
 
         <!-- Expanded navigation -->
