--- a/src/sponsors.html
+++ b/src/sponsors.html
@@ -2,8 +2,8 @@
 
 {% block content %}
 
-<h1>赞助商</h1>
-<p>赞助商为PyCon大会的成功举办提供了必不可少的支持. 同时,如果您和您的公司愿意支持中国Python社区的交流事业,请与PyCon组委会(邮件:stingchen@topgeek.org)联系,赞助商在大会官网的首页及"赞助商"页面展示您的公司Logo及简介. </p>
+<h1>{{ message.sponsors }}</h1>
+<p>{{ message.sponsors_hint }}</p>
 
 {% if sponsors %}
     <div class="row">
@@ -13,8 +13,9 @@
     {% set gold_sponsors = sponsors | selectattr('level_gold') %}
     {% set silver_sponsors = sponsors | selectattr('level_silver') %}
     {% set bronze_sponsors = sponsors | selectattr('level_bronze') %}
-    {% macro sponsors_list(some_sponsors) %}
+    {% macro sponsors_list(some_sponsors, sponsors_level) %}
         <div class="">
+            <h3>{{ sponsors_level }}</h3>
             {% for sponsor in some_sponsors %}
             <a href="{{ sponsor.link }}">
                 <img src="{{ sponsor.logo }}" alt="" class="sponsor-{{ sponsor.level }}"/>
@@ -23,16 +24,11 @@
             {% endfor %}
         </div>
     {% endmacro %}
-    <h3>钻石</h3>
-    {{ sponsors_list(diamond_sponsors) }}
-    <h3>白金</h3>
-    {{ sponsors_list(platinum_sponsors) }}
-    <h3>黄金</h3>
-    {{ sponsors_list(gold_sponsors) }}
-    <h3>白银</h3>
-    {{ sponsors_list(silver_sponsors) }}
-    <h3>青铜</h3>
-    {{ sponsors_list(bronze_sponsors) }}
+    {{ sponsors_list(diamond_sponsors, message.sponsors_diamond) }}
+    {{ sponsors_list(platinum_sponsors, message.sponsors_platinum) }}
+    {{ sponsors_list(gold_sponsors, message.sponsors_gold) }}
+    {{ sponsors_list(silver_sponsors, message.sponsors_silver) }}
+    {{ sponsors_list(bronze_sponsors, message.sponsors_bronze) }}
     </div>
 {% endif %}
 
