add title for each page

--- a/src/base/_base.html
+++ b/src/base/_base.html
@@ -9,7 +9,7 @@
         {% if canonical_url %}<link rel="canonical" href="{{ canonical_url }}">{% endif %}
         <link rel="shortcut icon" href="{{ site.base_url }}/asset/img/favicon.ico">
 
-        <title>{{ page_title }}</title>
+        <title>{{ page_title }} - PyCon China 2014</title>
 
         <link href="{{ site.base_url }}/asset/css/bootstrap-custom.min.css" rel="stylesheet">
         <link href="{{ site.base_url }}/asset/css/font-awesome-4.0.3.css" rel="stylesheet">
