--- a/src/proposals.html
+++ b/src/proposals.html
@@ -1,4 +1,6 @@
 {% extends "base/_base.html" %}
+{% set titles = { "cn" : "报名", "en" : "Proposals" } %}
+{% set page_title = titles[lang] %}
 
 {% block content %}
 <script src='https://www.jinshuju.net/f/oGC3kZ/embedded.js?banner=show&height=1462'></script>
