--- a/src/sponsors.html
+++ b/src/sponsors.html
@@ -1,4 +1,6 @@
 {% extends "base/_base.html" %}
+{% set titles = { "cn" : "赞助", "en" : "Sponsors" } %}
+{% set page_title = titles[lang] %}
 
 {% block content %}
 
