--- a/src/volunteers.html
+++ b/src/volunteers.html
@@ -1,4 +1,6 @@
 {% extends "base/_base.html" %}
+{% set titles = { "cn" : "志愿", "en" : "Volunteers" } %}
+{% set page_title = titles[lang] %}
 
 {% block content %}
 
