--- a/src/base/_nav.html
+++ b/src/base/_nav.html
@@ -25,14 +25,14 @@
             <ul class="dropdown-menu">
             {% for nav_item in nav_item.children %}
               <li {% if nav_item.active %}class="active"{% endif %}>
-                <a href="{{ nav_item.url }}">{{ nav_item.title }}</a>
+                <a href="{{ site.base_url }}/{{ nav_item.url }}">{{ nav_item.title }}</a>
               </li>
             {% endfor %}
             </ul>
           </li>
         {% else %}
           <li {% if nav_item.active %}class="active"{% endif %}>
-            <a href="{{ nav_item.url }}">{{ nav_item.title }}</a>
+            <a href="{{ site.base_url }}/{{ nav_item.url }}">{{ nav_item.title }}</a>
           </li>
         {% endif %}
         {% endfor %}
