更新赞助商logo；修改各页面标题设置；clean code

--- a/src/beijing.html
+++ b/src/beijing.html
@@ -1,6 +1,5 @@
 {% extends "base/_base.html" %}
-{% set titles = { "cn" : "北京日程", "en" : "Schedule in Beijing" } %}
-{% set page_title = titles[lang] %}
+{% set page_title = message.page_title_beijing %}
 
 {% block content %}
 {% if schedule_beijing %}
