--- a/src/proposals.html
+++ b/src/proposals.html
@@ -1,6 +1,5 @@
 {% extends "base/_base.html" %}
-{% set titles = { "cn" : "报名", "en" : "Proposals" } %}
-{% set page_title = titles[lang] %}
+{% set page_title = message.page_title_proposals %}
 
 {% block content %}
 <script src='https://www.jinshuju.net/f/oGC3kZ/embedded.js?banner=show&height=1462'></script>
