--- a/src/sponsors.html
+++ b/src/sponsors.html
@@ -1,6 +1,5 @@
 {% extends "base/_base.html" %}
-{% set titles = { "cn" : "赞助", "en" : "Sponsors" } %}
-{% set page_title = titles[lang] %}
+{% set page_title = message.page_title_sponsors %}
 
 {% block content %}
 
