--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,5 @@
 {% extends "base/_base.html" %}
-{% set titles = { "cn" : "首页", "en" : "Home" } %}
-{% set page_title = titles[lang] %}
+{% set page_title = message.page_title_index %}
 
 {% block content %}
 
