--- a/src/volunteers.html
+++ b/src/volunteers.html
@@ -1,6 +1,5 @@
 {% extends "base/_base.html" %}
-{% set titles = { "cn" : "志愿", "en" : "Volunteers" } %}
-{% set page_title = titles[lang] %}
+{% set page_title = message.page_title_volunteers %}
 
 {% block content %}
 
