--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,7 @@
             <div class="col-xs-12 col-sm-6 media proposal">
                 <a href="javascript:;" class="pull-left">
                     <img src="{{ proposal.avatar }}" alt="{{ proposal.name }}"
-                        class="media-object img-circle"/>
+                        class="media-object img-rounded"/>
                 </a>
                 <div class="media-body">
                     <h4 class="media-heading">{{ proposal.name }} </h4>
