--- a/src/volunteers.html
+++ b/src/volunteers.html
@@ -17,7 +17,7 @@
             <div class="col-xs-12 col-sm-6 media volunteer">
                 <a href="javascript:;" class="pull-left">
                     <img src="{{ volunteer.avatar }}" alt="{{ volunteer.name }}"
-                        class="media-object img-circle"/>
+                        class="media-object img-rounded"/>
                 </a>
                 <div class="media-body">
                     <h3 class="media-heading">{{ volunteer.name }} </h3>
