增补 Pythoneer 的解释

--- a/src/volunteers.html
+++ b/src/volunteers.html
@@ -34,6 +34,9 @@
     {% endmacro %}
     {# presentation #}
     <h1>{{ message.volunteers }}</h1>
+
+<p>{{ message.pythoneer }}</p>
+
     <h2>{{ message.organizers }}</h2>
     {{ volunteer_list(organizer_volunteers) }}
     <h2>{{ message.technicians }}</h2>
