增补邮箱,以及底部声明

--- a/src/base/_footer.html
+++ b/src/base/_footer.html
@@ -3,21 +3,26 @@
 
 <p>
 
-<b>Copyright &copy; 2014, <a href="http://weibo.com/pyconcn">PyConChina</a></b>
+<b>Copyright &copy; 2014, <a href="http://pychina.org/about.html">PyConChina</a></b>
 <br/>
-Discuss at :
+Dontact :
+<a href="mailto:support@pychina.org?subject=ask-PyCon2014China">
+    support@pychina.org
+    </a> 
+
+|
+Discuss :
 <a href="mailto:pyconchinese@googlegroups.com">
     pyconchinese@googlegroups.com
     </a>
-
 <br/>
-Built by 
+Building by 
 <a href="http://wiki.woodpecker.org.cn/moin/CPUG">CPyUG</a> 
-using <a href="http://www.mkdocs.org">MkDocs</a>
-, <a href="http://www.jquery.com/">jQuery</a>
+base <a href="https://gitcafe.com/PyConChina/staticpycon">staticPyCon</a>
+, <a href="https://github.com/Ceasar/staticjinja">staticjinja</a>
 , <a href="http://twitter.github.com/bootstrap/">Bootstrap</a>
-, <a href="https://code.google.com/p/google-code-prettify/">prettify</a>
 .
+
 <br/>CDN provider: 
     <a href="http://www.qiniu.com/">
         <img src="https://avatars1.githubusercontent.com/u/1563636?s=24"></a> 
