增补议程日期

--- a/src/base/_schedule.html
+++ b/src/base/_schedule.html
@@ -24,6 +24,7 @@
         <p>{{ message.address }}: {{ schedule.address }}</p>
         <p>{{ message.venue }}: {{ schedule.venue }}</p>
         <p>{{ message.traffic }}: {{ schedule.traffic }}</p>
+        <p>{{ message.date }}: <b>{{ schedule.date }}</b></p>
     </div>
     <h2>{{ message.schedule }}</h2>
     <table class="table table-bordered text-center">
