更新模板和部分讲师信息

--- a/src/base/_footer.html
+++ b/src/base/_footer.html
@@ -11,7 +11,7 @@ Contact :
 <a href="mailto:pyconchinese@googlegroups.com">pyconchinese@googlegroups.com</a>
 <br/>
 Built by <a href="http://wiki.woodpecker.org.cn/moin/CPUG">CPyUG</a> 
-with <a href="https://gitcafe.com/PyConChina/staticpycon">staticPyCon</a>
+with <a href="https://gitcafe.com/PyConChina/staticpycon">staticpycon</a>
 , <a href="https://github.com/Ceasar/staticjinja">staticjinja</a>
 , <a href="http://twitter.github.com/bootstrap/">Bootstrap</a>
 .
