--- a/src/shanghai.html
+++ b/src/shanghai.html
@@ -4,6 +4,7 @@
 {% block content %}
 {% if schedule_shanghai %}
     {% set schedule = schedule_shanghai %}
+    {% set schedule_title = page_title %}
     {% include "base/_schedule.html" %}
 {% endif %}
 {% endblock %}
