--- a/src/zhuhai.html
+++ b/src/zhuhai.html
@@ -4,6 +4,7 @@
 {% block content %}
 {% if schedule_zhuhai %}
     {% set schedule = schedule_zhuhai%}
+    {% set schedule_title = page_title %}
     {% include "base/_schedule.html" %}
 {% endif %}
 {% endblock %}
