--- a/src/index.html
+++ b/src/index.html
@@ -23,6 +23,8 @@
     {% set gold_sponsors = sponsors | selectattr('level_gold') %}
     {% set silver_sponsors = sponsors | selectattr('level_silver') %}
     {% set bronze_sponsors = sponsors | selectattr('level_bronze') %}
+    {% set partner_sponsors = sponsors | selectattr('level_partner') %}
+
     {% macro simple_sponsors_list(some_sponsors, sponsor_level) %}
         <h3>{{ sponsor_level }}</h3>
         <p>
@@ -38,6 +40,8 @@
     {{ simple_sponsors_list(gold_sponsors, message.sponsors_gold) }}
     {{ simple_sponsors_list(silver_sponsors, message.sponsors_silver) }}
     {{ simple_sponsors_list(bronze_sponsors, message.sponsors_bronze) }}
+
+    {{ simple_sponsors_list(partner_sponsors, message.sponsors_partner) }}
     </div>
 {% endif %}
 
