src: 更新 footer 中所用技术的信息

--- a/src/base/_footer.html
+++ b/src/base/_footer.html
@@ -6,17 +6,18 @@ Contact :
 | Discuss :
 <a href="mailto:pyconchinese@googlegroups.com">pyconchinese@googlegroups.com</a>
 <br/>
-Built by <a href="http://wiki.woodpecker.org.cn/moin/CPUG">CPyUG</a> 
-with <a href="https://gitcafe.com/PyConChina/staticpycon">staticpycon</a>
-, <a href="https://github.com/Ceasar/staticjinja">staticjinja</a>
-, <a href="http://twitter.github.com/bootstrap/">Bootstrap</a>
-.
-
-<br/>CDN provider: 
+Built by <a href="http://wiki.woodpecker.org.cn/moin/CPUG">CPyUG</a>
+with <a href="https://gitcafe.com/PyConChina/staticpycon">staticpycon</a>,
+<a href="https://github.com/Ceasar/staticjinja">staticjinja</a>,
+<a href="http://twitter.github.com/bootstrap/">Bootstrap</a>,
+<a href="https://github.com/Kronuz/pyScss">pyScss</a>,
+<a href="http://bourbon.io">Bourbon</a>,
+<a href="http://neat.bourbon.io">Neat</a>.
+<br/>CDN provider:
   <a href="http://www.qiniu.com/">
     <img src="http://assets.qiniu.com/qiniu-55x41.png" style="height:24px;width:24px">
   </a>
-; DVCS provider: 
+; DVCS provider:
   <a href="https://gitcafe.com">
     <img src="https://gitcafe.com/system/organization/normal_avatar/5074452e4dc04c1cef000001.jpg" style="height:24px;width:24px">
   </a>
